# session-writer

./: Cargo.toml  README.md  flake.nix  nixos-module.nix
docs/superpowers/specs/: 2026-03-30-pty-proxy-session-recording-design.md
src/: main.rs
